k8s/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-api
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: fitness-api-staging-ksa
      containers:
        - name: fitness-api
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: fitness-api-staging-secrets
